<resources>
    <string name="app_name">BookSwap</string>
    <string name="get_started">Get Started</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email_hint">you@university.edu</string>
    <string name="password_hint">Password *</string>
    <string name="search_hint">Search by title, author, or ISBN...</string>
    <string name="contact_seller">Contact Seller</string>
    <string name="send_inquiry">Send Inquiry to %1$s</string>
    <string name="send_inquiry_subtitle">Your message will be sent to the seller\'s email: %1$s</string>
    <string name="cancel">Cancel</string>
    <string name="send_message">Send Message</string>
    <string name="browse">Browse</string>
    <string name="profile">Profile</string>
    <string name="splash_desc">Buy and sell textbooks with fellow students. Save money, support your peers.</string>
</resources>