<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_blue">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_menu_book"
        app:tint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/tv_app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tv_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/tv_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:text="@string/splash_desc"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textAlignment="center"
        android:lineSpacingMultiplier="1.5"
        app:layout_constraintBottom_toTopOf="@+id/btn_get_started"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_app_name"
        android:layout_marginBottom="48dp"/>

    <Button
        android:id="@+id/btn_get_started"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginHorizontal="48dp"
        android:text="@string/get_started"
        android:textColor="@color/primary_blue"
        android:backgroundTint="@color/white"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_desc" />

</androidx.constraintlayout.widget.ConstraintLayout>